syntax = "proto3";

package datakeeper;

option go_package = "github.com/bobgromozeka/yp-diploma2/internal/interfaces/datakeeper";

service DataKeeper {
  rpc CreatePasswordPair(CreatePasswordPairRequest) returns (EmptyResponse);
  rpc RemovePasswordPair(RemovePasswordPairRequest) returns (EmptyResponse);

  rpc CreateText(CreateTextRequest) returns (EmptyResponse);
  rpc RemoveText(RemoveTextRequest) returns (EmptyResponse);

  rpc CreateCard(CreateCardRequest) returns (EmptyResponse);
  rpc RemoveCard(RemoveCardRequest) returns (EmptyResponse);

  rpc CreateBin(CreateBinRequest) returns (EmptyResponse);
  rpc RemoveBin(RemoveBinRequest) returns (EmptyResponse);

  rpc GetData(GetDataRequest) returns (stream GetDataResponse);
}

message EmptyResponse {}

message CreatePasswordPairRequest {
  string login = 1;
  string password = 2;
  optional string description = 3;
}

message GetDataRequest {}

message PasswordPair {
  int32 ID = 1;
  string login = 2;
  string password = 3;
  optional string description = 4;
}

message Text {
  int32 ID = 1;
  string name = 2;
  string text = 3;
  optional string description = 4;
}

message Card {
  int32 ID = 1;
  string name = 2;
  string number = 3;
  int32 validThroughMonth = 4;
  int32 validThroughYear = 5;
  int32 cvv = 6;
  optional string description = 7;
}

message Bin {
  int32 ID = 1;
  string name = 2;
  bytes data = 3;
  optional string description = 4;
}

message GetDataResponse {
  repeated PasswordPair passwordPairs = 1;
  repeated Text texts = 2;
  repeated Card cards = 3;
  repeated Bin bins = 4;
}

message RemovePasswordPairRequest {
  int32 ID = 1;
}

message CreateTextRequest {
  string name = 1;
  string text = 2;
  optional string description = 3;
}

message RemoveTextRequest {
  int32 ID = 1;
}

message CreateCardRequest {
  string name = 1;
  string number = 2;
  uint32 valid_through_month = 3;
  uint32 valid_through_year = 4;
  uint32 cvv = 5;
  optional string description = 6;
}

message RemoveCardRequest {
  int32 ID = 1;
}

message CreateBinRequest {
  string name = 1;
  bytes data = 2;
  optional string description = 3;
}

message RemoveBinRequest {
  int32 ID = 1;
}
